<?xml version="1.0" encoding="utf-8"?>

<!--
  sBrowser
  Copyright (C) Carles Sentis 2011 <codeskraps@gmail.com>
 
  sBrowser is free software: you can
  redistribute it and/or modify it under the terms
  of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of
  the License, or (at your option) any later
  version.
   
  sBrowser is distributed in the hope that it
  will be useful, but WITHOUT ANY WARRANTY; without
  even the implied warranty of MERCHANTABILITY or
  FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  General Public License for more details.
   
  You should have received a copy of the GNU
  General Public License along with this program.
  If not, see <http://www.gnu.org/licenses/>.
-->

<resources>

    <bool name="isTablet">true</bool>

    <string name="app_name">sBrowser</string>
    <string name="iconImageDescription">Icon</string>
    <string name="alertHttpTitle">Web Address</string>
    <string name="alertHttpSummary">Enter a new address:</string>
    <string name="alertSearchTitle">Search</string>
    <string name="alertSearchSummary">Enter a new search:</string>
    <string name="alertQuitTitle">Quit</string>
    <string name="alertQuitSummary">Are you sure you want to exit sBrowser?</string>
    <string name="errorMessage">sBrowser &#8211; Something when wrong!!!</string>
    <string name="txtIcon">&lt;</string>
    <string name="imgDescription">icon</string>

    <!-- Menu -->
    <string name="menuAbout">About</string>
    <string name="menuTabs">Tabs</string>
    <string name="menuPreference">Preferences</string>
    <string name="menuBookmarks">Bookmarks</string>
    <string name="menuDownloads">Downloads</string>
    <string name="menuFeedback">Feedback</string>
    <string name="menuBuyMeAPint">Buy Me A Pint</string>
    <string name="menuQuit">Quit</string>

    <!-- Context Menu -->
    <string name="contextMenuSaveImage">Save Image</string>
    <string name="contextMenuShareImage">Share Image</string>
    <string name="contextMenuSaveLink">Save Link</string>
    <string name="contextMenuCopyLink">Copy Link</string>
    <string name="contextMenuShareLink">Share Link</string>
    <string name="contextMenuOpenBookmark">Open bookmark</string>
    <string name="contextMenuEditBookmark">Edit bookmark</string>
    <string name="contextMenuDeleteBoomark">Delete bookmark</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password_again">Password Again</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out_short">Sign out</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_blank_email">enter an email</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="powered_by">Powered by</string>
    <string name="parse">Parse</string>
    <string name="slogan">The world is your playground</string>

    <!-- Preferences -->
    <string name="preference_activity">Preferences</string>
    <string name="pref_cat_display">Display</string>
    <string name="Fullscreen">Hide notification bar</string>
    <string name="Fullscreen_summary">Hides the notification bar from view</string>
    <string name="pref_cat_page_content_settings">Page content settings</string>
    <string name="pref_javascript">Enable JavaScript</string>
    <string name="pref_home_title">Set home page</string>
    <string name="pref_home_summary">https://encrypted.google.com/</string>
    <string name="categoryInformation">Information</string>
    <string name="sBrowserTitle">sBrowser v2.0</string>
    <string name="sBrowserSummary">License GNU GPL v3 &#8211; 2012 &#8211; Codeskraps</string>
    <string name="prefs_flash">Enable plug-ins</string>
    <string name="prefs_setUserAgent">Set user agent</string>
    <string name="prefs_cat_user">Profile</string>
    <string name="prefs_purchase_title">Purchase Pro Account</string>
    <string name="prefs_purchase_summary">Get extra features like saving bookmarks to a server</string>
    <string name="prefs_user_title">User Profile</string>

    <!-- User Preferences -->
    <string name="prefs_user_cat">Server</string>
    <string name="prefs_sync_title">Sync Now</string>
    <string name="prefs_sync_summary">Sync data with server</string>
    <string name="prefs_cat_security">Security</string>
    <string name="prefs_chk_bookmark_title">Bookmark Lockpattern</string>
    <string name="prefs_chk_bookmark_summary">Use a lockpattern to access bookmarks</string>
    <string name="prefs_lock_create_title">Create Lockpattern</string>

    <!-- Pro Accound -->
    <string name="pro_activity">Purchase Pro Account</string>
    <string name="pro_price">Price: %s</string>
    <string name="pro_btn">Purchase Pro Account</string>
    <string name="pro_sumary">Purchase a pro account to save bookmarks to sBrowser server to sync bookmarks across devices or after a re-install.\n\nThe price of the pro account it to cover the server cost.\n\nNo information either email or bookmarks will be shared with anybody.</string>

    <!-- Dialog -->
    <string name="dialog_title_add">Add bookmark</string>
    <string name="dialog_title_edit">Edit bookmark</string>
    <string name="dialog_title_delete">Delete Bookmark</string>
    <string name="dialog_message_delete">Are you sure?</string>
    <string name="dialog_name">Name</string>
    <string name="dialog_location">Location</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="addBookmark">Add Bookmark</string>
    <string name="tabsActivity">Tabs</string>
    <string name="newTab">New tab</string>

</resources>