<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_name" />

    <EditText
        android:id="@+id/dtxttitle"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />
        
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_location" />

    <EditText
        android:id="@+id/dtxturl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnok"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_ok"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btncancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_cancel"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>